# memwatch

./: .gitignore  .woodpecker.yaml  Cargo.toml  Makefile  README.md
docs/superpowers/plans/: 2026-05-01-memwatch.md
docs/superpowers/specs/: 2026-05-01-memwatch-design.md
packaging/deb/: control.template  postinst.template
packaging/rpm/: package.spec.template
scripts/: check-packages.sh
src/: bandwidth.rs  cli.rs  dmi.rs  lib.rs  main.rs  memory.rs  processes.rs  render.rs  snapshot.rs
