[package]
name = "memwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.86"
clap = { version = "=4.5.4", features = ["derive"] }
crossterm = "=0.28.1"
humantime = "=2.1.0"
instability = "=0.3.3"
libc = "=0.2.155"
ratatui = "=0.29.0"
unicode-segmentation = "=1.11.0"

[dev-dependencies]
tempfile = "=3.10.1"
